<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ability.ivw.IvwActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/appStopBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="157dp"
            android:layout_marginTop="25dp"
            android:text="@string/stop_app" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="552dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keyword" />

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAudioFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:checkable="true"
            android:text="音频流识别"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAudioRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="00:00:00"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:checkable="true"
            android:text="测试"
            android:visibility="invisible" />


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@color/gray_text"
            android:padding="5dp"
            android:scrollbars="none">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/emoLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/emoIV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:id="@+id/menuLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/lllmBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="@string/llm"
                android:visibility="gone" />

            <Button
                android:id="@+id/roleBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@id/lllmBtn"
                android:text="@string/role" />

            <Button
                android:id="@+id/toneBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@id/roleBtn"
                android:text="@string/tone" />

            <Button
                android:id="@+id/promptBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@id/toneBtn"
                android:text="@string/role_setting" />

            <Button
                android:id="@+id/musicBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@id/promptBtn"
                android:text="@string/music" />

            <Button
                android:id="@+id/langBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@id/musicBtn"
                android:text="@string/lang_setting" />

            <TextView
                android:id="@+id/hearingTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@id/hearingTV"
                android:text="@string/hearing"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/hearingTV"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="2dp"
                android:text="0"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </RelativeLayout>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/emoShowOrHideBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="25dp"
            android:text="@string/emo_off" />
    </RelativeLayout>

        <TextView
            android:id="@+id/connStatusTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/conn_status_err"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="17sp"
            android:visibility="invisible" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startOrStopBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="90dp"
            android:checkable="true"
            android:text="@string/start_robot"
            android:visibility="visible" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/promptEditLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4aadff">

            <TextView
                android:id="@+id/promptTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="20sp" />

            <Button
                android:id="@+id/promptCloseBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="40dp"
                android:text="@string/close" />

            <Button
                android:id="@+id/promptSaveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/promptCloseBtn"
                android:text="@string/save" />
        </RelativeLayout>

        <EditText
            android:id="@+id/promptETV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:textColor="@color/black" />

    </LinearLayout>

</RelativeLayout>